# LKI

./: .ahk  .bashrc  .bumpversion.cfg  .git-credentials  .gitconfig  .gitignore  .gitmodules  .hyper.js  .ideavimrc  .oh-my-posh.json  .pre-commit.sh  .profile  .tmux.conf  .travis.yml  .user-rule.txt  .windows-terminal.json  .zshrc  Brewfile  LICENSE  Makefile  Pipfile  README.md  _vimrc  pyproject.toml  setup-lite.sh  setup.cfg  setup.py  setup.sh  starship.toml
.githooks/: pre-commit
.github/workflows/: build.yml  pythonpackage.yml  release.yml  test-install.yml
CentOS/: .bashrc  .vimrc
NT/: _VIM73RC  _vrapperrc
Unix/: .bashrc
claude/: CLAUDE.md  settings.json
cmux/: cmux.json
cmux/hooks/: dedupe-sound.py
docker/: compose.yaml  docker-compose.yml
docker/nginx-conf/: default.conf
ghostty/: config.ghostty
k8s/: crd.yml
liki/: __init__.py  config.py
lki/: __init__.py  cmdline.py  config.py  error.py  exceptions.py  fires.py  utils.py
nt/: putty-sessions.reg
scripts/: aligate.bat  awsgate.bat  buf  cmdsh.bat  coffee  findcrlf  g.bat  gcp  gcsh  gdiff  git-to-bash.py  git_aliases.bash  gitbash.bat  gnb  gocov.bat  newblog  pf.bat  pinv.bat  pm.bat  ppm.bat  pr.bat  pv.bat  rbdev  rpdate  scoop-init  tsh  wget
snippets/: cap-to-ctrl.reg
unix/: .bashrc  .tmux.conf  .zshrc  setup.sh
