[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lki"
description = "Lirian Su's useful configuration and shortcuts"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Lirian Su", email = "liriansu@gmail.com"}]
dependencies = ["click>=8.1.3"]
dynamic = ["version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
]

[project.scripts]
lki = "lki.cmdline:entry"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/LKI/LKI"
Repository = "https://github.com/LKI/LKI"

[tool.setuptools]
packages = ["lki"]

[tool.setuptools.dynamic]
version = {attr = "lki.__version__"}

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["lki", "icarus"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
