[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

[project]
name = "lki"
version = "0.5.1"
description = "Lirian Su's useful configuration and shortcuts"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Lirian Su", email = "liriansu@gmail.com"}]
dependencies = ["click>=8.1.3"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
]

[project.scripts]
lki = "lki.cmdline:entry"

[project.optional-dependencies]
dev = ["ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/liriansu-opus/liriansu-opus"
Repository = "https://github.com/liriansu-opus/liriansu-opus"

# Flat layout: the importable package lives at the repo root (./lki) rather than
# under ./src, so point the uv build backend at the root.
[tool.uv.build-backend]
module-root = ""
module-name = "lki"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["lki", "icarus"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
